--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -43,13 +43,13 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="/community">Community Forum</a>
+          <a class="nav-link" href="/community/main">Community Forum</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/features/bidding">Event Quiz Bidding</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Postal Circle Map</a>
+          <a class="nav-link" href="/map">Postal Circle Map</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Resources</a>
