--- a/views/features/bidding.ejs
+++ b/views/features/bidding.ejs
@@ -16,4 +16,27 @@
             </form>
           </div>
     </div>
+<br><br>
+    <div class="row">    
+        <% for(let bid of bidding) { %>
+            <div class="col-4">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="<%= bid.url %>" class="img-fluid rounded-start" alt="Image Not Found">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body">
+                          <h5 class="card-title"><%=bid.productName%></h5>
+                          <p class="card-text"></p>
+                          <p class="card-text"><small class="text-body-secondary">No. of Bids: <%= bid.numberOfBids%></small></p>
+                          <p class="card-text"><small class="text-body-secondary">Average Bid: <%= bid.averageBid%></small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  
+                </div>
+        <%}%>
+    </div>
 </body>
