--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -46,7 +46,7 @@
           <a class="nav-link" href="/community/main">Community Forum</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/features/bidding">Event Quiz Bidding</a>
+          <a class="nav-link" href="/features/bidding">Event-Quiz-Bidding</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/map">Postal Circle Map</a>
@@ -55,7 +55,7 @@
           <a class="nav-link" href="#">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact us</a>
+          <a class="nav-link" href="/account/personalInfo">My Account</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
