--- a/views/map.ejs
+++ b/views/map.ejs
@@ -60,7 +60,7 @@
         id="metadata44">
         <rdf:RDF>
         <cc:Work
-            rdf:about="">
+            rdf:about="/products/assam">
             <dc:format>image/svg+xml</dc:format>
             <dc:type
             rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
@@ -219,31 +219,31 @@
         <h6>Circles</h6>
 
         <div class="state-names">
-          <div class="state-box">Andhra Pradesh Circle</div>
-          <div class="state-box">North Eastern Circle</div>
-          <div class="state-box">Assam Circle</div>
-          <div class="state-box">Bihar Circle</div>
-          <div class="state-box">Chhattisgarh Circle</div>
-          <div class="state-box">Delhi Circle</div>
-          <div class="state-box">Maharashtra Circle</div>
-          <div class="state-box">Gujarat Circle</div>
-          <div class="state-box">Haryana Circle</div>
-          <div class="state-box">Himachal Pradesh Circle</div>
-          <div class="state-box">Jammu and Kashmir Circle</div>
-          <div class="state-box">Jharkhand Circle</div>
-          <div class="state-box">Karnataka Circle</div>
-          <div class="state-box">Kerala Circle</div>
-          <div class="state-box">Madhya Pradesh Circle</div>
-          <div class="state-box">North Eastern Circle</div>
-          <div class="state-box">Odisha</div>
-          <div class="state-box">Punjab Circle</div>
-          <div class="state-box">Rajasthan Circle</div>
-          <div class="state-box">West Bengal Circle</div>
-          <div class="state-box">Tamil Nadu Circle</div>
-          <div class="state-box">Telangana Circle</div>
-          <div class="state-box">Uttar Pradesh Circle</div>
-          <div class="state-box">Uttarakhand Circle</div>
-          <div class="state-box">West Bengal Circle</div>
+          <a href="/products/assam"><div class="state-box">Andhra Pradesh Circle</div></a>
+          <a href="/products/assam"><div class="state-box">North Eastern Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Assam Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Bihar Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Chhattisgarh Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Delhi Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Maharashtra Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Gujarat Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Haryana Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Himachal Pradesh Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Jammu and Kashmir Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Jharkhand Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Karnataka Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Kerala Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Madhya Pradesh Circle</div></a>
+          <a href="/products/assam"><div class="state-box">North Eastern Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Odisha</div></a>
+          <a href="/products/assam"><div class="state-box">Punjab Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Rajasthan Circle</div></a>
+          <a href="/products/assam"><div class="state-box">West Bengal Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Tamil Nadu Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Telangana Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Uttar Pradesh Circle</div></a>
+          <a href="/products/assam"><div class="state-box">Uttarakhand Circle</div></a>
+          <a href="/products/assam"><div class="state-box">West Bengal Circle</div></a>
         </div>
       </div>
       
