--- a/views/features/events.ejs
+++ b/views/features/events.ejs
@@ -15,5 +15,24 @@
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
+    </div><br><br>
+    <div class="row">
+      <% for(let ev of event) { %>
+        <div class="col-12">
+            <div class="card" >
+              <div class="card-header" style="text-align: center;">
+                <a href="#">Add to calendar </a>
+              </div>
+                <div class="card-body">
+                  <h5 class="card-title"><%= ev.eventName %></h5>
+                  <h6 class="card-subtitle mb-2 text-body-secondary"><%= ev.description %></h6>
+                  <div>
+                  <a href="#" class="btn btn-primary"><p><%= ev.location %></p></i></a>
+                  <a href="#" class="btn btn-primary"><p><%= ev.eventDate %></p></i></a>
+                </div>
+                </div>
+              </div><br><br>
+        </div>
+      <% } %>
     </div>
 </body>
