--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -24,7 +24,7 @@
                 Account &amp; Support
             </h6>
             <ul>
-                <li><a href="/account/personalInfo">My Account</a></li>
+                <li><a href="/">Contact Us</a></li>
                 <li><a href="">FAQ's</a></li>
             </ul>
         </div>
