--- a/views/community/profile.ejs
+++ b/views/community/profile.ejs
@@ -1,31 +1,67 @@
-<% layout("layouts/boilerplate")%>
-<<<<<<< HEAD
-=======
-<div class="collections-page">
->>>>>>> 65ac8a149e910a82262bf849e4d1bd82bbee6aa0
-<body>
-    <br><br>
-    <div class="row">
-        <div class="col-5"></div>
-        <div class="col-3">
-            <img class="pp" src="https://pixabay.com/get/g8c310f64574b99808021128713d9c9f2681e0e2fb7f47419fd0c061d90d881611d785db456c6c507ca1ffe9aeeb478e2_1280.png" alt="">
-        </div>
+<% layout("layouts/boilerplate") %>
+
+<div class="profile-page">
+  <body>
+    <!-- Profile Section -->
+    <div class="row justify-content-center">
+      <div class="col-12 text-center">
+        <!-- Profile Picture -->
+        <img src="<%= profile.profilePicture.url %>" alt="Profile Image" class="rounded-circle" style="width: 150px; height: 150px;">
+      </div>
+      <div class="col-12 text-center">
+        <!-- Displaying User's Name with the new class -->
+        <h2 class="profile-name"><%= profile.name %></h2>
+      </div>
+      <div class="col-12 text-center">
+        <!-- Badges -->
+        <% profile.badges.forEach(badge => { %>
+          <img src="<%= badge.image %>" alt="<%= badge.name %>" style="width: 50px; height: 50px;">
+        <% }) %>
+      </div>
+      <div class="col-12 text-center">
+        <!-- Location -->
+        <h5><%= profile.location %></h5>
+        <!-- Bio -->
+        <p><%= profile.bio %></p>
+      </div>
     </div>
-    <h5>Collections</h5>
+    
+    <hr>
+
+    <!-- Collections Section -->
     <div class="row">
-        <div class="col-3">
-            <img class="pi"  src="https://i.ibb.co/F3fPSPN/image.png" alt="">
-        </div> &nbsp;
-        <div class="col-3">
-            <img class="pi" src="https://i.ibb.co/F3fPSPN/image.png" alt="">
-        </div> &nbsp;
-        <div class="col-3">
-            <img class="pi" src="https://i.ibb.co/F3fPSPN/image.png" alt="">
+      <% Object.keys(profile.collections).forEach(collectionName => { %>
+        <div class="col-md-4">
+          <h5 class="collection-title"><%= collectionName %></h5> <!-- Apply the class here -->
+          <div class="card">
+            <img src="<%= profile.collections[collectionName][0].image %>" class="card-img-top" alt="<%= profile.collections[collectionName][0].name %>">
+            <div class="row no-gutters">
+              <% profile.collections[collectionName].slice(1).forEach(item => { %>
+                <div class="col-6">
+                  <img src="<%= item.image %>" class="img-fluid" alt="<%= item.name %>">
+                </div>
+              <% }) %>
+            </div>
+          </div>
         </div>
+      <% }) %>
     </div>
-<<<<<<< HEAD
-</body>
-=======
-</body>
+
+    <hr>
+
+    <!-- Blog Posts Section -->
+    <div class="row">
+      <div class="col-12">
+        <h5 class="section-title">Blogposts</h5>
+        <% profile.blogPosts.forEach(post => { %>
+          <div class="card mb-3">
+            <div class="card-body">
+              <h5 class="blog-title"><%= post.title %></h5> <!-- Apply the class here -->
+              <p class="card-text"><%= post.excerpt %></p>
+            </div>
+          </div>
+        <% }) %>
+      </div>
+    </div>
+  </body>
 </div>
->>>>>>> 65ac8a149e910a82262bf849e4d1bd82bbee6aa0
